whitespace is now interpreted correctly

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -31,6 +31,7 @@ a {
 .desktop-spacing {
     padding: 70px;
 }
+
 .mobile-spacing {
     padding: 0px;
 }
@@ -58,6 +59,7 @@ a {
 }
 
 #welcome {
+
     font-size: 20pt;
     text-align: center;
 }
@@ -162,6 +164,7 @@ a {
     // color: @bg-color;
     text-align: justify;
     padding-top: 25px;
+    white-space: pre-wrap;
 }
 
 .letter-top {
